clusters/shire/apps/wanderbound/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wanderbound
  labels:
    pod-security.kubernetes.io/enforce: restricted
