clusters/shire/apps/wanderbound/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanderbound-frontend
  namespace: wanderbound
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wanderbound-frontend
  template:
    metadata:
      labels:
        app: wanderbound-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/itay-raveh/wanderbound-frontend:latest@sha256:3bdb58e6c4eae6559609b03bc7760c9bc698a1903df3bb040716752f10ceb9a3 # {"$imagepolicy": "flux-system:wanderbound-frontend"}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 10
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: nginx-conf
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
