clusters/shire/apps/wanderbound/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderbound-app
  namespace: wanderbound
spec:
  selector:
    app: wanderbound-app
  ports:
    - port: 8000
      targetPort: 8000
