clusters/shire/apps/wanderbound/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wanderbound-backend
  namespace: wanderbound
spec:
  selector:
    app: wanderbound-backend
  ports:
    - port: 8000
      targetPort: 8000
