clusters/shire/apps/wanderbound/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wanderbound-frontend
  namespace: wanderbound
spec:
  selector:
    app: wanderbound-frontend
  ports:
    - port: 8080
      targetPort: 8080
